# vios

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  ruff.toml
.claude/: settings.json
apps/engine/: .coverage  Dockerfile  pyproject.toml
apps/engine/src/vios_engine/: cli.py  config.py  db.py  main.py  playbooks.py  profiles.py
apps/engine/src/vios_engine/agents/: __init__.py  audio.py  branding.py  broll.py  cta.py  director.py  edit.py  layout.py  llm.py  qa.py  story.py  subtitle.py  visual.py
apps/engine/src/vios_engine/intelligence/: __init__.py  analyzer.py  audio.py  cache.py  sampler.py  scenes.py  transcribe.py
apps/engine/src/vios_engine/media/: __init__.py  hashing.py  models.py  pipeline.py  probe.py  repo.py  storage.py  transcode.py
apps/engine/src/vios_engine/pipeline/: __init__.py  budget.py  checkpoints.py  engine.py  graph.py  models.py
apps/engine/src/vios_engine/render/: __init__.py  masters.py  plan.py  queue.py  repo.py  runner.py  service.py  subtitles.py
apps/engine/tests/: make_filtergraph_goldens.py  make_golden_rev7.py  test_agents.py  test_agents_f4.py  test_agents_m10.py  test_agents_m12.py  test_agents_m9.py  test_client_profile.py  test_config.py  test_contracts.py  test_health.py  test_intelligence.py  test_intelligence_ml.py  test_media_ffmpeg.py  test_media_pipeline.py  test_pipeline_engine.py  test_playbook_loader.py  test_playbook_validate.py  test_render_ffmpeg.py  test_render_m11.py
apps/engine/tests/golden/: filtergraph_carousel_video.json  filtergraph_podcast_clip.json  filtergraph_reel_educativo.json  filtergraph_reel_f4_rev7.json
apps/render-svc/: Dockerfile  package.json
db/migrations/: 0001_init.sql  0002_assets_media.sql  0003_jobs_pipeline.sql  0004_renders.sql
docs/adr/: D1-timeline-ir.md  D2-grafo-fases.md  D3-director-workers.md  D4-analisis-cacheado.md  D5-python-node-split.md  D6-supabase.md  (+3 more)
playbooks/: podcast-clips.yaml  reel-educativo.example.yaml  reel-educativo.yaml
(+15 files in other folders)
