[project]
name = "vios-engine"
version = "0.0.1"
description = "VIOS engine — FastAPI + agents + pipeline"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.3",
  "asyncpg>=0.29",
  "httpx>=0.27",
  "typer>=0.12",
  "pyyaml>=6.0",
  "vios-contracts",
]

[project.scripts]
vios = "vios_engine.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]

[tool.uv.sources]
vios-contracts = { path = "../../packages/contracts", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vios_engine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
